add tests, methods update, delete